# ja2-experiments-vcp

./: .editorconfig  CMakeLists.txt  Makefile  README.md  xx.py
.github/workflows/: build.yml
docs/internal/: jplatform.md
ja2/: Alloc.c  Alloc.h  AniViewScreen.cc  Color.h  Credits.cc  FadeScreen.cc  GameInitOptionsScreen.cc  GameLoop.cc  GameSettings.cc  GameVersion.cc  HelpScreen.cc  Init.cc  InputAtom.cc  InputAtom.h  Intro.cc  JA2Splash.cc  JAScreens.cc  MainMenuScreen.cc  MessageBoxScreen.cc  MessageBoxScreen.h  OptionsScreen.cc  SaveLoadGame_unittest.cc  SaveLoadScreen.cc  Screens.cc  VanillaDataStructures_unittest.cc  jplatform.c  jplatform.h  jplatform_audio.c  jplatform_audio.h  jplatform_events.h  jplatform_input.c  jplatform_input.h  jplatform_time.c  jplatform_time.h  jplatform_video.c  jplatform_video.h
ja2/Editor/: CursorModes.cc  CursorModes.h  EditScreen.cc  EditorItems.cc  EditorMapInfo.cc  EditorMapInfo.h  EditorMercs.cc  EditorTaskbarUtils.cc  EditorTerrain.cc  LoadScreen.cc  MessageBox.cc  NewSmooth.cc  NewSmooth.h  PopupMenu.cc  SectorSummary.cc  SelectWin.cc
ja2/Laptop/: AIMMembers.cc  BobbyRMailOrder.cc  BrokenLink.cc  Files.cc  FloristOrderForm.cc  IMPBeginScreen.cc  IMPHomePage.cc  IMPPersonalityQuiz.cc  Insurance.cc  Laptop.cc  Laptop.h  Mercs.cc  Personnel.cc
ja2/SGP/: ButtonSystem.cc  CursorControl.cc  Debug.cc  FileMan_unittest.cc  Font.cc  HImage.cc  HImage.h  Input.cc  Input.h  LibraryDataBase.cc  LoadSaveData_unittest.cc  MouseSystem.cc  PCX.cc  SGP.cc  SGPBox.h  SGPStrings_unittest.cc  STCI.cc  Shading.cc  SmackStub.cc  SmackStub.h  SoundMan.cc  Types.h  UTF8String_unittest.cc  VObject.cc  VObject.h  VObjectBlitters.cc  VObjectBlitters.h  VSurface.cc  VSurface.h  Video.cc  Video.h  wchar_unittest.cc
ja2/Strategic/: Assignments.cc  AutoResolve.cc  CreatureSpreading.cc  GameClock.cc  MapScreen.cc  MapScreenInterface.cc  MapScreenInterface.h  MapScreenInterfaceMap.cc  MapScreenInterfaceMap.h  MapScreenInterfaceMapInventory.cc  MapScreenInterfaceTownMineInfo.cc  Meanwhile.cc  MercContract.cc  PreBattleInterface.cc  QuestDebugSystem.cc  StrategicAI.cc  StrategicMap.cc  StrategicMovementCosts.cc  StrategicStatus.cc  TownMilitia.cc
ja2/Tactical/: AirRaid.cc  AnimationControl.cc  ArmsDealerInit.cc  AutoBandage.cc  DialogueControl.cc  Faces.cc  HandleUI.cc  HandleUI.h  Interface.cc  InterfaceControl.cc  InterfaceItems.cc  InterfacePanels.cc  InterfaceUtils.cc  Items.cc  Keys.cc  LoadSaveMercProfile_unittest.cc  MapInformation.cc  MercEntering.cc  Overhead.cc  RottingCorpses.cc  Weapons.cc  (+8 more)
tools/: update_sources.py
(+44 files in other folders)
